--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
   <div class="posts">
-    {{ range .Pages.ByDate }} <!-- Sorts posts from oldest to newest -->
+    {{ range .Site.RegularPages.ByDate }} <!-- Sort all posts by oldest first -->
       <article class="post on-list">
         <h2 class="post-title">
           <a href="{{ .Permalink }}">{{ .Title | markdownify }}</a>
@@ -9,25 +9,12 @@
           <time datetime="{{ .Date.Format "2006-01-02" }}" class="post-date">
             {{ .Date.Format "2006-01-02" }}
           </time>
-          {{ with .Params.Author }}
-            <span class="post-author">— {{ . }}</span>
-          {{ end }}
         </div>
-        {{ if .Params.tags }}
-          <span class="post-tags">
-            {{ range .Params.tags }}
-              <a href="{{ (urlize (printf "tags/%s" . )) | absURL }}/">#{{ . }}</a>
-            {{ end }}
-          </span>
-        {{ end }}
         <div class="post-content">
           {{ .Summary | plainify | safeHTML }}
         </div>
-        <div>
-          <a class="read-more button" href="{{ .RelPermalink }}">Read more →</a>
-        </div>
+        <a class="read-more button" href="{{ .RelPermalink }}">Read more →</a>
       </article>
     {{ end }}
-    {{ partial "pagination.html" . }}
   </div>
 {{ end }}
